--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Test
         run: |
           cd backend
-          docker-compose run --rm app sh -c "python manage.py test"
+          docker compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: |
           cd backend
-          docker-compose run --rm app sh -c "flake8"
+          docker compose run --rm app sh -c "flake8"
