--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Test
         run: |
           cd backend
-          docker compose run --rm app sh -c "python manage.py test"
+          docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: |
           cd backend
