--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,8 +27,9 @@ RUN python -m venv /py && \
   django-user && \
   mkdir -p /vol/web/media && \
   mkdir -p /vol/web/static && \
-  chown -R django-user:django-user /vol && \
-  chmod -R 755 /vol
+  chown -R django-user:django-user /app/vol && \
+  chmod -R 755 /app/vol && \
+  chmod -R +x /scripts
 
 ENV PATH="/py/bin:$PATH"
 
